chats screen part two

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 @import "screens/login.css";
 @import "screens/friends.css";
 
