--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -49,6 +49,6 @@
   justify-content: center;
   align-items: center;
   font-size: 132px;
-  animation: hideSplashScreen 0.3 ease-in-out forwards;
+  animation: hideSplashScreen 0.3s ease-in-out forwards;
   animation-delay: 2s;
 }
